examples/example-workload/ingressroute/04-blue-green-delegation/blue.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: blue
  namespace: default
spec: 
  routes: 
    - match: /
      services: 
        - name: s2
          port: 80
