examples/example-workload/ingressroute/04-blue-green-delegation/green.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: green
  namespace: default
spec: 
  routes: 
    - match: /
      services: 
        - name: s1
          port: 80
